--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Test</title>
+    <meta name="description" content="Форма обратной связи на сайте.">
+    <meta name="keywords" content="форма, обратная связь, контакт, сайт">
+    <meta name="author" content="Евгений Эльяшевич">
+
+    <title>Форма обратной связи</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="manifest.json" />
 </head>
+
 <body>
-<div id="app">
-
+<header>
 1
+</header>
 
-</div>
+<main>
+    <div class="contact-form">
+        <h1 id="form-title" class="contact-form__title">Свяжитесь с нами</h1>
+        <p id="form-description" class="contact-form__description">Заполните форму, чтобы связаться с нами.</p>
+
+        <!-- Форма с улучшениями для доступности и автозаполнения -->
+        <form class="contact-form__form" action="#" method="POST" aria-labelledby="form-title"
+              aria-describedby="form-description" autocomplete="on">
+            <div class="contact-form__field">
+                <label for="name" class="contact-form__label">Имя</label>
+                <input type="text" id="name" name="name" class="contact-form__input" required autocomplete="name">
+            </div>
+            <div class="contact-form__field">
+                <label for="email" class="contact-form__label">E-mail</label>
+                <input type="email" id="email" name="email" class="contact-form__input" required autocomplete="email">
+            </div>
+            <div class="contact-form__field">
+                <label for="phone" class="contact-form__label">Телефон</label>
+                <input type="tel" id="phone" name="phone" class="contact-form__input" autocomplete="tel">
+            </div>
+            <div class="contact-form__field">
+                <label for="message" class="contact-form__label">Сообщение</label>
+                <textarea id="message" name="message" class="contact-form__textarea" required autocomplete="off"></textarea>
+            </div>
+            <button type="submit" class="contact-form__submit">Отправить</button>
+        </form>
+    </div>
+</main>
+
+<footer>
+    <p>&copy; 2025 Тестовое задание для <strong>ITPROFIT</strong>. Все права защищены.</p>
+</footer>
+
 </body>
+
 </html>
