--- a/src/index.html
+++ b/src/index.html
@@ -17,32 +17,34 @@
 
 <body>
 <header>
-1
+    1
 </header>
 
 <main>
     <div class="contact-form">
         <h1 id="form-title" class="contact-form__title">Свяжитесь с нами</h1>
         <p id="form-description" class="contact-form__description">Заполните форму, чтобы связаться с нами.</p>
-
-        <!-- Форма с улучшениями для доступности и автозаполнения -->
         <form class="contact-form__form" action="#" method="POST" aria-labelledby="form-title"
-              aria-describedby="form-description" autocomplete="on">
+              aria-describedby="form-description" autocomplete="on" novalidate>
             <div class="contact-form__field">
                 <label for="name" class="contact-form__label">Имя</label>
                 <input type="text" id="name" name="name" class="contact-form__input" required autocomplete="name">
+                <p id="name-error" class="error-message"></p>
             </div>
             <div class="contact-form__field">
                 <label for="email" class="contact-form__label">E-mail</label>
                 <input type="email" id="email" name="email" class="contact-form__input" required autocomplete="email">
+                <p id="email-error" class="error-message"></p>
             </div>
             <div class="contact-form__field">
                 <label for="phone" class="contact-form__label">Телефон</label>
-                <input type="tel" id="phone" name="phone" class="contact-form__input" autocomplete="tel">
+                <input type="tel" id="phone" name="phone" class="contact-form__input" required>
+                <p id="phone-error" class="error-message"></p>
             </div>
             <div class="contact-form__field">
                 <label for="message" class="contact-form__label">Сообщение</label>
-                <textarea id="message" name="message" class="contact-form__textarea" required autocomplete="off"></textarea>
+                <textarea id="message" name="message" class="contact-form__textarea" required></textarea>
+                <p id="message-error" class="error-message"></p>
             </div>
             <button type="submit" class="contact-form__submit">Отправить</button>
         </form>
