implemented axios requests; code refactoring;

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <body>
 <header>
-    1
+    Тестовое задание
 </header>
 
 <main>
@@ -46,6 +46,14 @@
                 <textarea id="message" name="message" class="contact-form__textarea" required></textarea>
                 <p id="message-error" class="error-message"></p>
             </div>
+
+            <div class="contact-form__check">
+                <input type="checkbox" id="simulate-error" class="contact-form__input">
+                <label for="simulate-error" class="contact-form__label">
+                    Симулировать ошибку
+                </label>
+            </div>
+
             <button type="submit" class="contact-form__submit">Отправить</button>
         </form>
     </div>
