--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                     Симулировать ошибку
                 </label>
             </div>
-
+            <button type="button" id="open-modal-btn">Открыть модальное окно</button>
             <button type="submit" class="contact-form__submit">Отправить</button>
         </form>
     </div>
@@ -62,6 +62,17 @@
 <footer>
     <p>&copy; 2025 Тестовое задание для <strong>ITPROFIT</strong>. Все права защищены.</p>
 </footer>
+
+<div class="modal" id="modal">
+    <div class="modal-content">
+        <span class="modal-close" id="modal-close" role="button">&times;</span>
+        <p>Наш <strong>контент</strong> модалки!</p>
+    </div>
+</div>
+
+<div id="loader">
+    <div class="loader__spinner"></div>
+</div>
 
 </body>
 
